fix issues after review

--- a/tests/fixtures/initial.html
+++ b/tests/fixtures/initial.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="/resources/index.css">
+  <link rel="stylesheet" href="resources/index.css">
 </head>
 <body>
-  <img src="/resources/img.jpg" alt="Просто картинка">
+  <img src="./resources/img.jpg" alt="Просто картинка">
   <button class="button" onclick="onButtonClick()">Кнопка</button>
   <script src="/resources/index.js"></script>
 </body>
